--- a/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/Views/Home/Index.cshtml
@@ -1,31 +1,210 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<!-- Nav -->
+<nav id="nav">
+    <ul class="container">
+        <li><a href="#top">Top</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<!-- Home -->
+<div class="wrapper wrapper-style1 wrapper-first">
+    <article class="container" id="top">
+        <div class="row">
+            <div class="4u">
+                <span class="me image image-full"><img src="images/me.jpg" alt="" /></span>
+            </div>
+            <div class="8u">
+                <header>
+                    <h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+                </header>
+                <p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license/">CCA license</a>.</p>
+                <a href="#work" class="button button-big">Learn about what I do</a>
+            </div>
+        </div>
+    </article>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<!-- Work -->
+<div class="wrapper wrapper-style2">
+    <article id="work">
+        <header>
+            <h2>I design and build amazing things.</h2>
+            <span>Odio turpis amet sed consequat eget posuere consequat.</span>
+        </header>
+        <div class="container">
+            <div class="row">
+                <div class="4u">
+                    <section class="box box-style1">
+                        <span class="fa featured fa-comments-o"></span>
+                        <h3>Consequat lorem</h3>
+                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                    </section>
+                </div>
+                <div class="4u">
+                    <section class="box box-style1">
+                        <span class="fa featured fa-file-o"></span>
+                        <h3>Lorem dolor tempus</h3>
+                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                    </section>
+                </div>
+                <div class="4u">
+                    <section class="box box-style1">
+                        <span class="fa featured fa-thumbs-o-up"></span>
+                        <h3>Feugiat posuere</h3>
+                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button button-big">See some of my recent work</a>
+        </footer>
+    </article>
+</div>
+
+<!-- Portfolio -->
+<div class="wrapper wrapper-style3">
+    <article id="portfolio">
+        <header>
+            <h2>Awesome work makes happy clients.</h2>
+            <span>Proin odio consequat  sapien vestibulum ipsum primis sed amet consequat lorem dolore feugiat lorem ipsum dolore.</span>
+        </header>
+        <div class="container">
+            <div class="row">
+                <div class="12u">
+                </div>
+            </div>
+            <div class="row">
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/generic-smartphone/8949517882265310" class="image image-full"><img src="images/portfolio01.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/generic-smartphone/8949517882265310">Magna feugiat</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/n33" class="image image-full"><img src="images/portfolio02.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/n33">Veroeros primis</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/wood-ui-kit/3574765984616310" class="image image-full"><img src="images/portfolio03.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/wood-ui-kit/3574765984616310">Lorem ipsum</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+            </div>
+            <div class="row">
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/n33-pattern-set-1/3522389001865317" class="image image-full"><img src="images/portfolio04.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/n33-pattern-set-1/3522389001865317">Tempus dolore</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/cityscape/9803996277226316" class="image image-full"><img src="images/portfolio05.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/cityscape/9803996277226316">Feugiat aliquam</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+                <div class="4u">
+                    <article class="box box-style2">
+                        <a href="http://flypixel.com/n33" class="image image-full"><img src="images/portfolio06.jpg" alt="" /></a>
+                        <h3><a href="http://flypixel.com/n33">Sed amet ornare</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#contact" class="button button-big">Get in touch with me</a>
+        </footer>
+    </article>
+</div>
+
+<!-- Contact -->
+<div class="wrapper wrapper-style4">
+    <article id="contact" class="container small">
+        <header>
+            <h2>Want to hire me? Get in touch!</h2>
+            <span>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</span>
+        </header>
+        <div>
+            <div class="row">
+                <div class="12u">
+                    <form method="post" action="#">
+                        <div>
+                            <div class="row half">
+                                <div class="6u">
+                                    <input type="text" name="name" id="name" placeholder="Name" />
+                                </div>
+                                <div class="6u">
+                                    <input type="text" name="email" id="email" placeholder="Email" />
+                                </div>
+                            </div>
+                            <div class="row half">
+                                <div class="12u">
+                                    <input type="text" name="subject" id="subject" placeholder="Subject" />
+                                </div>
+                            </div>
+                            <div class="row half">
+                                <div class="12u">
+                                    <textarea name="message" id="message" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="12u">
+                                    <a href="#" class="button form-button-submit">Send Message</a>
+                                    <a href="#" class="button button-alt form-button-reset">Clear Form</a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="12u">
+                    <hr />
+                    <h3>Find me on ...</h3>
+                    <ul class="social">
+                        <li class="twitter"><a href="http://twitter.com/n33co" class="fa fa-twitter"><span>Twitter</span></a></li>
+                        <li class="facebook"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
+                        <li class="dribbble"><a href="http://dribbble.com/n33" class="fa fa-dribbble"><span>Dribbble</span></a></li>
+                        <li class="linkedin"><a href="#" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
+                        <li class="tumblr"><a href="#" class="fa fa-tumblr"><span>Tumblr</span></a></li>
+                        <li class="googleplus"><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
+                        <li class="github"><a href="http://github.com/n33" class="fa fa-github"><span>Github</span></a></li>
+                        <!--
+                        <li class="rss"><a href="#" class="fa fa-rss"><span>RSS</span></a></li>
+                        <li class="instagram"><a href="#" class="fa fa-instagram"><span>Instagram</span></a></li>
+                        <li class="foursquare"><a href="#" class="fa fa-foursquare"><span>Foursquare</span></a></li>
+                        <li class="skype"><a href="#" class="fa fa-skype"><span>Skype</span></a></li>
+                        <li class="soundcloud"><a href="#" class="fa fa-soundcloud"><span>Soundcloud</span></a></li>
+                        <li class="youtube"><a href="#" class="fa fa-youtube"><span>YouTube</span></a></li>
+                        <li class="blogger"><a href="#" class="fa fa-blogger"><span>Blogger</span></a></li>
+                        <li class="flickr"><a href="#" class="fa fa-flickr"><span>Flickr</span></a></li>
+                        <li class="vimeo"><a href="#" class="fa fa-vimeo"><span>Vimeo</span></a></li>
+                        -->
+                    </ul>
+                    <hr />
+                </div>
+            </div>
+        </div>
+        <footer>
+            <ul id="copyright">
+                <li>&copy; 2013 Jane Doe</li>
+                <li>Images: <a href="http://fotogrph.com">fotogrph</a></li>
+                <li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+            </ul>
+        </footer>
+    </article>
 </div>
