Commiting the Privacy Policy

--- a/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/Views/Home/Index.cshtml
@@ -1,14 +1,4 @@
-﻿<!-- Nav -->
-<nav id="nav">
-    <ul class="container">
-        <li><a href="#top">Top</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
-
-<!-- Home -->
+﻿<!-- Home -->
 <div class="wrapper wrapper-style1 wrapper-first">
     <article class="container" id="top">
         <div class="row">
