--- a/PersonalWebsite/Views/Shared/_Layout.cshtml
+++ b/PersonalWebsite/Views/Shared/_Layout.cshtml
@@ -24,6 +24,16 @@
     <!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
 </head>
 <body>
+    <!-- Nav -->
+    <nav id="nav">
+        <ul class="container">
+            <li><a href="#top">Top</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
         @RenderBody()
 </body>
 </html>
