--- a/PersonalWebsite/css/style.css
+++ b/PersonalWebsite/css/style.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+﻿@charset 'UTF-8';
 
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 
@@ -20,6 +20,19 @@
 		-ms-box-sizing: border-box;
 		box-sizing: border-box;
 	}
+
+    .pageborder 
+    {
+        margin-left: 5%;
+        margin-right: 5%;
+        padding: 1%;
+        -ms-border-radius: 14px;
+        border-radius: 14px;
+        -webkit-box-shadow: rgba(0,0,0,1) 0 1px 10px;
+        -ms-box-shadow: rgba(0,0,0,1) 0 1px 10px;
+        box-shadow: rgba(0,0,0,1) 0 1px 10px;
+        background: white;
+    }
 
 	body, input, textarea
 	{
